syntax = "proto3";

package file;

option go_package = "github.com/backend-app/backend/pkg/proto/file";

service FileService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc GetFileMetadata(GetFileMetadataRequest) returns (GetFileMetadataResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}

message UploadFileRequest {
  oneof data {
    FileMetadata metadata = 1;
    FileChunk chunk = 2;
  }
}

message FileMetadata {
  string name = 1;
  int64 size = 2;
  string mime_type = 3;
  string user_id = 4;
}

message FileChunk {
  bytes data = 1;
  int32 chunk_number = 2;
}

message UploadFileResponse {
  string file_id = 1;
  string storage_path = 2;
  int64 uploaded_size = 3;
}

message DownloadFileRequest {
  string file_id = 1;
  string user_id = 2;
  int64 offset = 3;
  int64 limit = 4;
}

message DownloadFileResponse {
  bytes data = 1;
  int64 chunk_size = 2;
  bool is_last = 3;
}

message GetFileMetadataRequest {
  string file_id = 1;
  string user_id = 2;
}

message GetFileMetadataResponse {
  FileInfo file = 1;
}

message ListFilesRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListFilesResponse {
  repeated FileInfo files = 1;
  int32 total = 2;
}

message DeleteFileRequest {
  string file_id = 1;
  string user_id = 2;
}

message DeleteFileResponse {
  bool success = 1;
}

message FileInfo {
  string id = 1;
  string user_id = 2;
  string name = 3;
  int64 size = 4;
  string mime_type = 5;
  string storage_path = 6;
  string storage_type = 7;
  string expires_at = 8;
  string created_at = 9;
  string updated_at = 10;
}
